added photos for court of honor and 2 rank changes

--- a/events.html
+++ b/events.html
@@ -213,9 +213,9 @@
       <div class="right">
         <div class="content">
           <h3>July</h3>
-          <h4>Court of Honor</h4>
+          <h4>Court of Honor/YMCA Miami County - Robinson Branch</h4>
           <p>Court of honor is a troop event held to award the scouts all different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(JCH23)">Click here to see photos</a>
         </div>
         <a href="https://miamicountyymca.net/">
           <div class="eventImg">
@@ -291,6 +291,19 @@
       <div class="right">
         <div class="content">
           <h3>November</h3>
+          <h4>Fire Pit Build/YMCA Miami County - Robinson Branch</h4>
+          <p>This event is a service project where the scouts will build a fire pit. This fire pit will be used a lot by the troop for many different things. The fire pit will be located behind the pavilion at the YMCA.</p>
+          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+        </div>
+        <a href="https://miamicountyymca.net/">
+          <div class="eventImg">
+            <img src="./assets/images/events/YMCA.jpg" alt="YMCA">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
           <p>Turkey Bowl will be held at the Redmen Picnic Grounds in Troy, OH. For this event the scouts spend the day cooking a Thanksgiving meal that they will share with their families that evening.</p>
           <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
@@ -301,16 +314,16 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>December</h3>
-          <h4>Yearly Planning/TBD</h4>
+          <h4>Yearly Planning/YMCA Miami County - Robinson Branch</h4>
           <p>The Yearly Planning event location is yet to be determined. At this event the scouts plan all the next years events.</p>
           <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
         </div>
-        <a href="">
+        <a href="https://miamicountyymca.net/">
           <div class="eventImg">
-            <img src="./assets/images/boy-scout-logo.jpg" alt="boy scouts of america">
+            <img src="./assets/images/events/YMCA.jpg" alt="YMCA">
           </div>
         </a>
       </div>
