august-september newsletter

--- a/newsletter.html
+++ b/newsletter.html
@@ -58,6 +58,14 @@
     </section>
     <section class="newsletter">
       <div class="news">
+        <h2>August/September 2023</h2>
+        <a href="https://drive.google.com/file/d/1ogyAKRHW0EN-j0bUlyC8VEfQdBvIfw1K/view?usp=sharing">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-aug-sept2023.PNG" alt="July 2023 Newsletter">
+          </div>
+        </a>
+      </div>
+      <div class="news">
         <h2>July 2023</h2>
         <a href="https://drive.google.com/file/d/1nVcyFGlMGJ0K189gzQRtxT1MKDS4T8Lr/view?usp=sharing">
           <div class="newsImg">
