added photos for fire pit build

--- a/events.html
+++ b/events.html
@@ -293,7 +293,7 @@
           <h3>November</h3>
           <h4>Fire Pit Build/YMCA Miami County - Robinson Branch</h4>
           <p>This event is a service project where the scouts will build a fire pit. This fire pit will be used a lot by the troop for many different things. The fire pit will be located behind the pavilion at the YMCA.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(FP23)">Click here to see photos</a>
         </div>
         <a href="https://miamicountyymca.net/">
           <div class="eventImg">
