--- a/photos.html
+++ b/photos.html
@@ -83,6 +83,7 @@
         <a href="#gallery" onclick="renderPhotos(BEP232)">Brighton's Eagle Project Phase 2</a>
         <a href="#gallery" onclick="renderPhotos(Mum23)">Mum Festival</a>
         <a href="#gallery" onclick="renderPhotos(IC23)">Indoor Climbing</a>
+        <a href="#gallery" onclick="renderPhotos(FP23)">Fire Pit Build</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
