turkey bowl photos and added new scout Gavin R.

--- a/photos.html
+++ b/photos.html
@@ -84,6 +84,7 @@
         <a href="#gallery" onclick="renderPhotos(Mum23)">Mum Festival</a>
         <a href="#gallery" onclick="renderPhotos(IC23)">Indoor Climbing</a>
         <a href="#gallery" onclick="renderPhotos(FP23)">Fire Pit Build</a>
+        <a href="#gallery" onclick="renderPhotos(TB23)">Turkey Bowl</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
