--- a/resources.html
+++ b/resources.html
@@ -70,6 +70,7 @@
           <a href="./assets/docs/duty-roster.pdf">Duty Roster</a>
           <a href="./assets/docs/meal-planner.pdf">Meal Planner</a>
           <a href="./assets/docs/parol_box_checklist.pdf">Patrol Box Checklist</a>
+          <a href="./assets/docs/Court_of_Honor_Script.pdf">Court of Honor Script</a>
           <a href="./assets/docs/Scoutmaster-Conference-Preparation.pdf">Scoutmaster Conference Sheet</a>
         </div>
       </div>
