added photos for annual planning and added court of honor event for december

--- a/events.html
+++ b/events.html
@@ -318,8 +318,21 @@
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/YMCA Miami County - Robinson Branch</h4>
-          <p>The Yearly Planning event location is yet to be determined. At this event the scouts plan all the next years events.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <p>The Yearly Planning event will be held at the YMCA Miami County - Robinson Branch. At this event the scouts plan all the next years events.</p>
+          <a href="#gallery2" onclick="renderEventPhotos2(AP23)">Click here to see photos</a>
+        </div>
+        <a href="https://miamicountyymca.net/">
+          <div class="eventImg">
+            <img src="./assets/images/events/YMCA.jpg" alt="YMCA">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>December</h3>
+          <h4>Court of Honor/YMCA Miami County - Robinson Branch</h4>
+          <p>Court of honor is a troop event held to award the scouts all different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
+          <a href="#gallery2" onclick="renderEventPhotos2(DCH23)">Click here to see photos</a>
         </div>
         <a href="https://miamicountyymca.net/">
           <div class="eventImg">
