--- a/photos.html
+++ b/photos.html
@@ -85,6 +85,7 @@
         <a href="#gallery" onclick="renderPhotos(IC23)">Indoor Climbing</a>
         <a href="#gallery" onclick="renderPhotos(FP23)">Fire Pit Build</a>
         <a href="#gallery" onclick="renderPhotos(TB23)">Turkey Bowl</a>
+        <a href="#gallery" onclick="renderPhotos(AP23)">Annual Planning</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
