december court of honor photos added

--- a/events.html
+++ b/events.html
@@ -420,7 +420,7 @@
         <div class="content">
           <h3>July</h3>
           <h4>Court of Honor/YMCA Miami County - Robinson Branch</h4>
-          <p>Court of honor is a troop event held to award the scouts all different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
+          <p>Court of honor is a troop event held to award the scouts all the different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
           <a href="#gallery2" onclick="renderEventPhotos2(JCH23)">Click here to see photos</a>
         </div>
         <a href="https://miamicountyymca.net/">
@@ -537,7 +537,7 @@
         <div class="content">
           <h3>December</h3>
           <h4>Court of Honor/YMCA Miami County - Robinson Branch</h4>
-          <p>Court of honor is a troop event held to award the scouts all different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
+          <p>Court of honor is a troop event held to award the scouts all the different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
           <a href="#gallery2" onclick="renderEventPhotos2(DCH23)">Click here to see photos</a>
         </div>
         <a href="https://miamicountyymca.net/">
