--- a/photos.html
+++ b/photos.html
@@ -92,6 +92,7 @@
         <a href="#gallery" onclick="renderPhotos(FP23)">Fire Pit Build</a>
         <a href="#gallery" onclick="renderPhotos(TB23)">Turkey Bowl</a>
         <a href="#gallery" onclick="renderPhotos(AP23)">Annual Planning</a>
+        <a href="#gallery" onclick="renderPhotos(DCH23)">December Court of Honor</a>
       </div>
     <section class="main">
     <div class="gallery" id="gallery"></div>       
