--- a/index.html
+++ b/index.html
@@ -107,8 +107,20 @@
       </div>
     </section>
     <section>
+      <div class="troop-title">
+        <h3>The New Look of Troop 586</h3>
+      </div>
       <div class="troop-photo">
-          <img src="./assets/images/troop-photo-2023.jpg" alt="troop photo">
+        <div>
+          <img src="./assets/images/Trailer/trailer2.jpg" alt="troop photo">
+        </div>
+        <div>
+          <img src="./assets/images/Trailer/trailer1.jpg" alt="troop photo">
+          <img src="./assets/images/Trailer/trailer4.jpg" alt="troop photo">
+        </div>
+        <div>
+          <img src="./assets/images/Trailer/trailer3.jpg" alt="troop photo">
+        </div>
       </div>
     </section>
     <section class="hero">
