added photos for toboganning

--- a/events.html
+++ b/events.html
@@ -67,7 +67,7 @@
           <h3>January</h3>
           <h4>tobogganing/Camp Chief Little Turtle</h4>
           <p>For this event the scouts will camp at Camp Chief Little Turtle in Angola, IN and travel to nearby Pokagon State park to ride toboggans.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(TOB24)">Click here to see photos</a>
         </div>
         <a href="https://www.in.gov/dnr/state-parks/parks-lakes/pokagon-state-parktrine-state-recreation-area/toboggan-run-at-pokagon-state-park/">
           <div class="eventImg">
