--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="troop-photo">
+        <img src="./assets/images/TOB24/TOB50.jpg" alt="troop photo">
+      </div>
+    </section>
     <section class="hero">
       <div class="hero-cta">
         <h2>Start Building Your<br>
