--- a/photos.html
+++ b/photos.html
@@ -60,8 +60,8 @@
     <section class="year">
       <h2>Year 2024</h2>
     </section>
-      <div class="soon">
-        <h1>Coming Soon . . .</h1>
+      <div class="category">
+        <a href="#gallery" onclick="renderPhotos(TOB24)">Tobogganing</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
