added photos for crossover and added new scouts to roster

--- a/photos.html
+++ b/photos.html
@@ -62,6 +62,7 @@
     </section>
       <div class="category">
         <a href="#gallery" onclick="renderPhotos(TOB24)">Tobogganing</a>
+        <a href="#gallery" onclick="renderPhotos(CO28524)">Pack 285 Crossover</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
