--- a/events.html
+++ b/events.html
@@ -80,7 +80,7 @@
           <h3>February</h3>
           <h4>Pack 285 Crossover</h4>
           <p>This event will be held at Saint John The Baptist Church in Tipp City, OH. At this event new scouts will cross over from Cub Scouts to Boy Scouts. Our scouts will be there to welcome them into the troop as they cross over the symbolic bridge.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(CO28524)">Click here to see photos</a>
         </div>
         <a href="https://www.stjohntippcity.org/">
           <div class="eventImg">
