added scout sunday photos and editted new scouts

--- a/events.html
+++ b/events.html
@@ -92,8 +92,8 @@
         <div class="content">
           <h3>February</h3>
           <h4>Scout Sunday</h4>
-          <p>This event will be held at United Methodist Church in Vandalia, OH. Scout Sunday is an opportunity for scouts to attend services in uniform, conduct a flag ceremony, speak about Scouting, and present religious awards.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <p>This event will be held at the Church of the Scout's choice. Scout Sunday is an opportunity for scouts to attend services in uniform, conduct a flag ceremony, speak about Scouting, and present religious awards.</p>
+          <a href="#gallery2" onclick="renderEventPhotos2(SS24)">Click here to see photos</a>
         </div>
         <a href="https://www.vandaliaunitedmethodistchurch.com/">
           <div class="eventImg">
