--- a/photos.html
+++ b/photos.html
@@ -63,6 +63,7 @@
       <div class="category">
         <a href="#gallery" onclick="renderPhotos(TOB24)">Tobogganing</a>
         <a href="#gallery" onclick="renderPhotos(CO28524)">Pack 285 Crossover</a>
+        <a href="#gallery" onclick="renderPhotos(SS24)">Scout Sunday</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
