added new merit badge counselor and new reimbersment form

--- a/merit-badge-counselors.html
+++ b/merit-badge-counselors.html
@@ -58,29 +58,6 @@
     </section>
     <section class="merit">
       <div class="counselor">
-        <h3>Jim Ridgeway</h3>
-        <ul>
-          <li>Cooking</li>
-          <li>Wilderness Survival</li>
-          <li>Astronomy</li>
-          <li>Camping</li>
-          <li>Chemistry</li>
-          <li>Citizenship in Society</li>
-          <li>Composite Materials</li>
-          <li>Digital Tech</li>
-          <li>Emergency Preparedness</li>
-          <li>Environmental Science</li>
-          <li>First Aid</li>
-          <li>Fish and Wildlife</li>
-          <li>Fishing</li>
-          <li>Fly Fishing</li>
-          <li>Golf</li>
-          <li>Nuclear Science</li>
-          <li>Scout Heritage</li>
-          <li>Sustainability</li>
-        </ul>
-      </div>
-      <div class="counselor">
         <h3>Andy Luersman</h3>
         <ul>
           <li>Cooking</li>
@@ -103,6 +80,40 @@
           <li>Traffic Safety</li>
           <li>Truck Transportation</li>
           <li>Woodworking</li>
+        </ul>
+      </div>
+      <div class="counselor">
+        <h3>Matt Ernst</h3>
+        <ul>
+          <li>Automotive Maintenance</li>
+          <li>Camping</li>
+          <li>Cycling</li>
+          <li>Engineering</li>
+          <li>Hiking</li>
+          <li>Personal Fitness</li>
+        </ul>
+      </div>
+      <div class="counselor">
+        <h3>Jim Ridgeway</h3>
+        <ul>
+          <li>Cooking</li>
+          <li>Wilderness Survival</li>
+          <li>Astronomy</li>
+          <li>Camping</li>
+          <li>Chemistry</li>
+          <li>Citizenship in Society</li>
+          <li>Composite Materials</li>
+          <li>Digital Tech</li>
+          <li>Emergency Preparedness</li>
+          <li>Environmental Science</li>
+          <li>First Aid</li>
+          <li>Fish and Wildlife</li>
+          <li>Fishing</li>
+          <li>Fly Fishing</li>
+          <li>Golf</li>
+          <li>Nuclear Science</li>
+          <li>Scout Heritage</li>
+          <li>Sustainability</li>
         </ul>
       </div>
     </section>
