added titles to homepage links

--- a/index.html
+++ b/index.html
@@ -142,15 +142,30 @@
         </p>
       </div>
       <div class="links">
-        <a href="https://www.scouting.org/programs/scouts-bsa/advancement-and-awards/merit-badges/" title="Merit Badges">
-            <img src="./assets/images/merit-badge-banner.jpg" alt="">
-        </a>
-        <a href="https://scoutbook.scouting.org/" title="Scoutbook">
-            <img src="./assets/images/Scoutbook-Banner.png" alt="">
-        </a>
-        <a href="https://www.animatedknots.com/" title="Animated Knots">
-            <img src="./assets/images/grog-knots-title.jpg" alt="">
-        </a>
+        <div>
+          <h4>
+            Merit badges
+          </h4>
+          <a href="https://www.scouting.org/programs/scouts-bsa/advancement-and-awards/merit-badges/" title="Merit Badges">
+              <img src="./assets/images/merit-badge-banner.jpg" alt="">
+          </a>
+        </div>
+        <div>
+          <h4>
+            Scoutbook
+          </h4>
+          <a href="https://scoutbook.scouting.org/" title="Scoutbook">
+              <img src="./assets/images/Scoutbook-Banner.png" alt="">
+          </a>
+        </div>
+        <div>
+          <h4>
+            Animated Knots
+          </h4>
+          <a href="https://www.animatedknots.com/" title="Animated Knots">
+              <img src="./assets/images/grog-knots-title.jpg" alt="">
+          </a>
+        </div>
       </div>
     </section>
     <section id="contact-us" class="contact">
