added photos for RLFA

--- a/events.html
+++ b/events.html
@@ -106,7 +106,7 @@
           <h3>February</h3>
           <h4>Real Life First Aid/Monroe Grange</h4>
           <p>Real life First Aid will be held at Monroe Grange in Tipp City, OH. At this event the scouts are presented with real life first aid situations and have to react with proper first aid in a timely manner.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(RLFA24)">Click here to see photos</a>
         </div>
         <a href="https://zaubee.com/biz/monroe-grange-89ivxudo">
           <div class="eventImg">
