--- a/newsletter.html
+++ b/newsletter.html
@@ -58,6 +58,14 @@
     </section>
     <section class="newsletter">
       <div class="news">
+        <h2>January 2024</h2>
+        <a href="https://drive.google.com/file/d/1hHzZjPV7EaqNRIvois2ePCl8EQe0VZyR/view?usp=sharing">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-jan2024.PNG" alt="January 2024 Newsletter">
+          </div>
+        </a>
+      </div>
+      <div class="news">
         <h2>August/September 2023</h2>
         <a href="https://drive.google.com/file/d/1ogyAKRHW0EN-j0bUlyC8VEfQdBvIfw1K/view?usp=sharing">
           <div class="newsImg">
