opened troop store for spring sales

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img id="logo" src="./assets/images/troop-store1.PNG" alt="troop 586 shirt with logo">
           <img id="soup" src="./assets/images/troop-store2.PNG" alt="troop shirt with Soup The Turtle">
         </div>
-        <p id="text">Troop families, our Troop Gear Store is open for orders. The store will remain open the entire month of September. This a great gift idea for Christmas. Orders will be picked up by Mr. Luersman once they are all completed.</p>
+        <p id="text">Troop families, our Troop Gear Store is open for orders. The store will remain open the entire month of March. Orders will be picked up by Mr. Luersman (Glen) once they are all completed.</p>
         <img id="hat" src="./assets/images/troop-store3.PNG" alt="troop hat with logo">
       </div>
       <div class="store-link">
