added article from scribe to february event

--- a/events.html
+++ b/events.html
@@ -105,7 +105,7 @@
         <div class="content">
           <h3>February</h3>
           <h4>Real Life First Aid/Monroe Grange</h4>
-          <p>Real life First Aid will be held at Monroe Grange in Tipp City, OH. At this event the scouts are presented with real life first aid situations and have to react with proper first aid in a timely manner.</p>
+          <p>In February, we went to Monroe Grange to practice our first aid skills. It was a cold campout, with temperatures going down all the way to the twenties. It was also the first campout that the karate turtle patrol came along. Scouts had a blast playing in the snow. We had a lot of wrestling matches, and we chased each other around in the snow. We also did Real Life First Aid. Real Life First Aid is a mockup of what a real first aid situation looks like. It tests scouts on their ability to remain calm, assess injuries, and their ability to apply treatment. In all, we had two scouts fake die. Overall, this campout was a blast and everyone had fun. </p>
           <a href="#gallery1" onclick="renderEventPhotos1(RLFA24)">Click here to see photos</a>
         </div>
         <a href="https://zaubee.com/biz/monroe-grange-89ivxudo">
