changed turtles patol patch

--- a/troop-roster.html
+++ b/troop-roster.html
@@ -61,8 +61,8 @@
         <a href="#cards" onclick="createCards(fancyFishes)">Fancy Fishes Patrol</a>
         <a href="#cards" onclick="createCards(wetBandits)">Wet Bandits Patrol</a>
         <a href="#cards" onclick="createCards(fireChickens)">Fire Chickens Patrol</a>
-        <a href="#cards" onclick="createCards(karateTurtles)">Karate Turtles Patrol</a>
-        <a href="#cards" onclick="createCards(flyingFoxes)">Flying Foxes Patrol</a>
+        <a href="#cards" onclick="createCards(turtles)">Turtles Patrol</a>
+        <!-- <a href="#cards" onclick="createCards(flyingFoxes)">Flying Foxes Patrol</a> -->
         <a href="#cards" onclick="createCards(scoutMasters)">Assistant Scoutmasters</a>
         <a href="#cards" onclick="createCards(committee)">Committee Members</a>
       </div>
