changed and added adult leaders and merit badge counselors

--- a/merit-badge-counselors.html
+++ b/merit-badge-counselors.html
@@ -94,6 +94,15 @@
         </ul>
       </div>
       <div class="counselor">
+        <h3>Bill Kaufman</h3>
+        <ul>
+          <li>Chess</li>
+          <li>Emergency Preparedness</li>
+          <li>Personal Management</li>
+          <li>Wilderness Survival</li>
+        </ul>
+      </div>
+      <div class="counselor">
         <h3>Jim Ridgeway</h3>
         <ul>
           <li>Cooking</li>
