added photos for scouting for food

--- a/photos.html
+++ b/photos.html
@@ -65,6 +65,7 @@
         <a href="#gallery" onclick="renderPhotos(CO28524)">Pack 285 Crossover</a>
         <a href="#gallery" onclick="renderPhotos(SS24)">Scout Sunday</a>
         <a href="#gallery" onclick="renderPhotos(RLFA24)">Real Life First Aid</a>
+        <a href="#gallery" onclick="renderPhotos(SFF24)">Scouting For Food</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
