added new merit badge counselor

--- a/merit-badge-counselors.html
+++ b/merit-badge-counselors.html
@@ -83,6 +83,19 @@
         </ul>
       </div>
       <div class="counselor">
+        <h3>Robert (Nick) Lesher</h3>
+        <ul>
+          <li>Architecture</li>
+          <li>Art</li>
+          <li>Drafting</li>
+          <li>Family Life</li>
+          <li>Gardening</li>
+          <li>Model Design and Building</li>
+          <li>Sustainability</li>
+          <li>Theater</li>
+        </ul>
+      </div>
+      <div class="counselor">
         <h3>Matt Ernst</h3>
         <ul>
           <li>Automotive Maintenance</li>
