added february/march newsletter

--- a/newsletter.html
+++ b/newsletter.html
@@ -58,6 +58,14 @@
     </section>
     <section class="newsletter">
       <div class="news">
+        <h2>February/March 2024</h2>
+        <a href="https://drive.google.com/file/d/1C0-TMOw5eSzeucfu79pvO8P3LNy7UdZc/view?usp=sharing">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-feb-mar2024.PNG" alt="February/March 2024 Newsletter">
+          </div>
+        </a>
+      </div>
+      <div class="news">
         <h2>January 2024</h2>
         <a href="https://drive.google.com/file/d/1hHzZjPV7EaqNRIvois2ePCl8EQe0VZyR/view?usp=sharing">
           <div class="newsImg">
