added photos for IFly

--- a/events.html
+++ b/events.html
@@ -132,7 +132,7 @@
           <h3>April</h3>
           <h4>Indoor Skydiving/Camp Friedlander</h4>
           <p>For this event the scouts will be camping at Camp Friedlander in Loveland, OH. The scouts will be taking the STEM Nova program at IFly where they will learn the science behind skydiving and get to take 2 flights in the indoor skydiving tunnel.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(IFLY24)">Click here to see photos</a>
         </div>
         <a href="https://www.iflyworld.com/?gad_source=1&gclid=Cj0KCQiA4NWrBhD-ARIsAFCKwWtotMtlptX256CaYLvB8HCElwLQKZdpecWx3ybyDjDL5Fhc_RYipfoaAtlVEALw_wcB">
           <div class="eventImg">
