--- a/photos.html
+++ b/photos.html
@@ -66,6 +66,7 @@
         <a href="#gallery" onclick="renderPhotos(SS24)">Scout Sunday</a>
         <a href="#gallery" onclick="renderPhotos(RLFA24)">Real Life First Aid</a>
         <a href="#gallery" onclick="renderPhotos(SFF24)">Scouting For Food</a>
+        <a href="#gallery" onclick="renderPhotos(IFLY24)">Indoor Skydiving</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
