added cookbooks to resources page

--- a/resources.html
+++ b/resources.html
@@ -76,6 +76,28 @@
       </div>
     </section>
     <section class="title">
+      <h2 class="section-title">Camp Recipes</h2>
+    </section>
+    <section class="container">
+      <div class="wrapper-cook">
+        <div class="forms-cook">
+          <a href="./assets/docs/cookbookforbeginnerscopy.pdf.crdownload">
+            <img src="./assets/images/Cookbooks/Beginner Scout Cookbook.PNG" alt="Beginner Scout Cookbook">
+          </a>
+        </div>
+        <div class="forms-cook">
+          <a href="./assets/docs/Scout Cookbook.pdf">
+            <img src="./assets/images/Cookbooks/13th Law Cookbook.PNG" alt="13th Law Cookbook">
+          </a>
+        </div>
+        <div class="forms-cook">
+          <a href="./assets/docs/Scout_Dutch_Oven_Cookbook.pdf.crdownload">
+            <img src="./assets/images/Cookbooks/Scout Dutch Oven Cookbook.PNG" alt="Scout Dutch Oven Cookbook">
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="title">
       <h2 class="section-title">Parent Resources</h2>
     </section>
     <section class="container">
