hid cookbook section

--- a/resources.html
+++ b/resources.html
@@ -75,7 +75,7 @@
         </div>
       </div>
     </section>
-    <section class="title">
+    <!-- <section class="title">
       <h2 class="section-title">Camp Recipes</h2>
     </section>
     <section class="container">
@@ -96,7 +96,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
     <section class="title">
       <h2 class="section-title">Parent Resources</h2>
     </section>
