added photos for fishing and updated ranks

--- a/events.html
+++ b/events.html
@@ -145,7 +145,7 @@
           <h3>May</h3>
           <h4>Fishing/Chenoweth Trails</h4>
           <p>The Fishing main event is held at Chenoweth Trails in Greenville, OH. The scouts put all of their fishing knowledge to the test as they attempt to catch fish (everyone catches a fish at this pond).</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(Fish24)">Click here to see photos</a>
         </div>
         <a href="https://www.mattlight72.com/about-chenoweth-trails/">
           <div class="eventImg">
