--- a/photos.html
+++ b/photos.html
@@ -67,6 +67,7 @@
         <a href="#gallery" onclick="renderPhotos(RLFA24)">Real Life First Aid</a>
         <a href="#gallery" onclick="renderPhotos(SFF24)">Scouting For Food</a>
         <a href="#gallery" onclick="renderPhotos(IFLY24)">Indoor Skydiving</a>
+        <a href="#gallery" onclick="renderPhotos(Fish24)">Fishing/Chenoweth Trails</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
