added photos for memorial day and gaga ball pit

--- a/events.html
+++ b/events.html
@@ -158,7 +158,7 @@
           <h3>May</h3>
           <h4>Memorial Day Weekend/Tipp City</h4>
           <p>On Saturday the scouts place flags on the graves of veterans at Maple Hill Cemetery. On Monday the scouts participate in the Memorial Day parade.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(MD24)">Click here to see photos</a>
         </div>
         <a href="https://www.pbs.org/national-memorial-day-concert/memorial-day/history/">
           <div class="eventImg memorial">
@@ -167,6 +167,19 @@
         </a>
       </div>
       <div class="left">
+        <div class="content">
+          <h3>May</h3>
+          <h4>Gaga ball pit build/Miami County YMCA - Robinson Branch</h4>
+          <p>This event is a service project for our charter organization. The scouts spread and compacted gravel then built the Gaga ball pit. In the near future the scouts will be installing a rubber floor for the Gaga ball pit.</p>
+          <a href="#gallery1" onclick="renderEventPhotos1(Gaga24)">Click here to see photos</a>
+        </div>
+        <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
+          <div class="eventImg">
+            <img src="./assets/images/events/YMCA.jpg" alt="Miami County YMCA - Robinson Branch">
+          </div>
+        </a>
+      </div>
+      <div class="right">
         <div class="content">
           <h3>June</h3>
           <h4>Summer Camp/Camp Chief Little Turtle</h4>
@@ -179,7 +192,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>July</h3>
           <h4>Paddle Sports/Camp Birch</h4>
@@ -192,7 +205,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>August</h3>
           <h4>Caving/Marengo Caves</h4>
@@ -205,7 +218,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
@@ -218,7 +231,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>October</h3>
           <h4>Wilderness Survival/Camp Michaels</h4>
@@ -231,7 +244,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
@@ -244,7 +257,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/Miami County YMCA - Robinson Branch</h4>
