--- a/photos.html
+++ b/photos.html
@@ -68,6 +68,8 @@
         <a href="#gallery" onclick="renderPhotos(SFF24)">Scouting For Food</a>
         <a href="#gallery" onclick="renderPhotos(IFLY24)">Indoor Skydiving</a>
         <a href="#gallery" onclick="renderPhotos(Fish24)">Fishing/Chenoweth Trails</a>
+        <a href="#gallery" onclick="renderPhotos(MD24)">Memorial Day</a>
+        <a href="#gallery" onclick="renderPhotos(Gaga24)">Gaga ball pit build</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
