--- a/resources.html
+++ b/resources.html
@@ -64,6 +64,7 @@
           <a href="./assets/docs/Medical_ABC.pdf">Medical Forms</a>
           <a href="https://my.scouting.org/online-registration/26b25f61-fc8d-4936-8319-d7f5eeac0d68/applicant-type">Youth Application</a>
           <a href="https://my.scouting.org/online-registration/26b25f61-fc8d-4936-8319-d7f5eeac0d68/applicant-type">Adult Application</a>
+          <a href="https://drive.google.com/file/d/1fqJDlljIfzk4rGonP5YQ0r7I2mEVJGvQ/view?usp=sharing">Merit Badge Counselor Application</a>
         </div>
         <div class="forms">
           <h3>Scout Forms</h3>
