--- a/photos.html
+++ b/photos.html
@@ -70,6 +70,7 @@
         <a href="#gallery" onclick="renderPhotos(Fish24)">Fishing/Chenoweth Trails</a>
         <a href="#gallery" onclick="renderPhotos(MD24)">Memorial Day</a>
         <a href="#gallery" onclick="renderPhotos(Gaga24)">Gaga ball pit build</a>
+        <a href="#gallery" onclick="renderPhotos(SCD024)">Summer Camp Day 0</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
