added photos for day 1 at summer camp

--- a/photos.html
+++ b/photos.html
@@ -71,6 +71,7 @@
         <a href="#gallery" onclick="renderPhotos(MD24)">Memorial Day</a>
         <a href="#gallery" onclick="renderPhotos(Gaga24)">Gaga ball pit build</a>
         <a href="#gallery" onclick="renderPhotos(SCD024)">Summer Camp Day 0</a>
+        <a href="#gallery" onclick="renderPhotos(SCD124)">Summer Camp Day 1</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
