added summer camp day 2 photos

--- a/photos.html
+++ b/photos.html
@@ -72,6 +72,10 @@
         <a href="#gallery" onclick="renderPhotos(Gaga24)">Gaga ball pit build</a>
         <a href="#gallery" onclick="renderPhotos(SCD024)">Summer Camp Day 0</a>
         <a href="#gallery" onclick="renderPhotos(SCD124)">Summer Camp Day 1</a>
+        <a href="#gallery" onclick="renderPhotos(SCD224)">Summer Camp Day 2</a>
+        <!-- <a href="#gallery" onclick="renderPhotos(SCD324)">Summer Camp Day 3</a> -->
+        <!-- <a href="#gallery" onclick="renderPhotos(SCD424)">Summer Camp Day 4</a> -->
+        <!-- <a href="#gallery" onclick="renderPhotos(SCD524)">Summer Camp Day 5</a> -->
       </div>
     <section class="year">
       <h2>Year 2023</h2>
