--- a/events.html
+++ b/events.html
@@ -186,7 +186,7 @@
           <p>This years summer camp will be held at Camp Chief Little Turtle in Angola, IN. At summer camp the scouts work on completing merit badges, team building exercises, rank advancement requirements, and of course having fun with friends.</p>
           <a href="#gallery1" onclick="renderEventPhotos1(SCD024)">Click Here For Day 0 photos</a>
           <a href="#gallery1" onclick="renderEventPhotos1(SCD124)">Click Here For Day 1 photos</a>
-          <!-- <a href="#gallery1" onclick="renderEventPhotos1(SCD224)">Click Here For Day 2 photos</a> -->
+          <a href="#gallery1" onclick="renderEventPhotos1(SCD224)">Click Here For Day 2 photos</a>
           <!-- <a href="#gallery1" onclick="renderEventPhotos1(SCD324)">Click Here For Day 3 photos</a> -->
           <!-- <a href="#gallery1" onclick="renderEventPhotos1(SCD424)">Click Here For Day 4 photos</a> -->
           <!-- <a href="#gallery1" onclick="renderEventPhotos1(SCD524)">Click Here For Day 5 photos</a> -->
