added photos for paddle sports

--- a/photos.html
+++ b/photos.html
@@ -76,6 +76,7 @@
         <a href="#gallery" onclick="renderPhotos(SCD324)">Summer Camp Day 3</a>
         <a href="#gallery" onclick="renderPhotos(SCD424)">Summer Camp Day 4</a>
         <a href="#gallery" onclick="renderPhotos(SCD524)">Summer Camp Day 5</a>
+        <a href="#gallery" onclick="renderPhotos(PS24)">Paddle Sports</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
