--- a/events.html
+++ b/events.html
@@ -202,7 +202,7 @@
           <h3>July</h3>
           <h4>Paddle Sports/Camp Birch</h4>
           <p>The Paddle Sports main event will be held at Camp Hugh Taylor Birch in Yellow Springs, OH. The scouts will go on a 5 mile canoe trip down the Mad River.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(PS24)">Click here to see photos</a>
         </div>
         <a href="https://www.birchbarkcanoelivery.com/">
           <div class="eventImg">
