added photos for court of honor

--- a/events.html
+++ b/events.html
@@ -212,6 +212,19 @@
       </div>
       <div class="right">
         <div class="content">
+          <h3>July</h3>
+          <h4>Court of Honor/YMCA Miami County - Robinson Branch</h4>
+          <p>Court of honor is a troop event held to award the scouts all the different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
+          <a href="#gallery2" onclick="renderEventPhotos2(JCH24)">Click here to see photos</a>
+        </div>
+        <a href="https://miamicountyymca.net/">
+          <div class="eventImg">
+            <img src="./assets/images/events/YMCA.jpg" alt="YMCA">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
           <h3>August</h3>
           <h4>Caving/Marengo Caves</h4>
           <p>The Caving event will be held at Marengo Caves in Marengo, IN. Scouts will be exploring the "wild" cave filled with mud, water, tight spaces, and all the adventure they can handle.</p>
@@ -223,7 +236,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
@@ -236,7 +249,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>October</h3>
           <h4>Wilderness Survival/Camp Michaels</h4>
@@ -249,7 +262,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
@@ -262,7 +275,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/Miami County YMCA - Robinson Branch</h4>
