added photos for caving

--- a/events.html
+++ b/events.html
@@ -228,7 +228,7 @@
           <h3>August</h3>
           <h4>Caving/Marengo Caves</h4>
           <p>The Caving event will be held at Marengo Caves in Marengo, IN. Scouts will be exploring the "wild" cave filled with mud, water, tight spaces, and all the adventure they can handle.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(MC24)">Click here to see photos</a>
         </div>
         <a href="https://marengocave.com/">
           <div class="eventImg">
