--- a/photos.html
+++ b/photos.html
@@ -78,6 +78,7 @@
         <a href="#gallery" onclick="renderPhotos(SCD524)">Summer Camp Day 5</a>
         <a href="#gallery" onclick="renderPhotos(PS24)">Paddle Sports</a>
         <a href="#gallery" onclick="renderPhotos(JCH24)">July Court of Honor</a>
+        <a href="#gallery" onclick="renderPhotos(MC24)">Marengo Caves</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
