--- a/resources.html
+++ b/resources.html
@@ -104,6 +104,15 @@
     <section class="container">
       <div class="resources">
         <div class="forms">
+          <a href="./assets/docs/SBR Summer Camp 2025 FAQ.pdf">
+            <img src="./assets/images/summer_camp_2025_info.PNG" alt="summer camp 2025 information">
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="resources">
+        <div class="forms">
           <a href="https://education.ohio.gov/Topics/Other-Resources/Scholarships/ACE/Ohio-ACE-How-to-Apply">
             <img src="./assets/images/ACE_banner.png" alt="ACE Scholarship">
           </a>
