took down mum fest, edited troop store, and changed troop photo

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <img id="logo" src="./assets/images/troop-store1.PNG" alt="troop 586 shirt with logo">
           <img id="soup" src="./assets/images/troop-store2.PNG" alt="troop shirt with Soup The Turtle">
         </div>
-        <p id="text">Troop families, our Troop Gear Store is open for orders. The store will remain open until October 11th. Orders will be picked up by Mr. Luersman (Glen) once they are all completed.</p>
+        <p id="text">Troop families, our Troop Gear Store is open for orders. The store will remain open until October 25th. Orders will be picked up by Mr. Luersman (Glen) once they are all completed. This is a great Christmas gift idea for you or relatives who would like to know what to get your scout.</p>
         <img id="hat" src="./assets/images/troop-store3.PNG" alt="troop hat with logo">
       </div>
       <div class="store-link">
@@ -125,7 +125,7 @@
     </section>
     <section>
       <div class="troop-photo">
-        <img src="./assets/images/TOB24/TOB50.jpg" alt="troop photo">
+        <img src="./assets/images/Summer_Camp24/Day0/13.jpg" alt="troop photo">
       </div>
     </section>
     <section class="hero">
