added troop resource survey

--- a/resources.html
+++ b/resources.html
@@ -113,6 +113,15 @@
     <section class="container">
       <div class="resources">
         <div class="forms">
+          <a href="./assets/docs/Troop Resource Survery.pdf">
+            <img src="./assets/images/Troop_Resource_Survey.PNG" alt="troop resource survey">
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="resources">
+        <div class="forms">
           <a href="https://education.ohio.gov/Topics/Other-Resources/Scholarships/ACE/Ohio-ACE-How-to-Apply">
             <img src="./assets/images/ACE_banner.png" alt="ACE Scholarship">
           </a>
