added wilderness survival photos, mum fest photos, took down troop store

--- a/events.html
+++ b/events.html
@@ -241,7 +241,7 @@
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
           <p>Mum Fest is the big fundraiser of the year for the scouts. Starting in August the scouts begin selling mums to be painted on driveways. September begins the painting all the way up to Mum Fest. At Mum Fest the scouts run a Cobbler Booth.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(Mum24)">Click here to see photos</a>
         </div>
         <a href="https://tippmumfestival.org/">
           <div class="eventImg">
@@ -254,7 +254,7 @@
           <h3>October</h3>
           <h4>Wilderness Survival/Camp Michaels</h4>
           <p>Wilderness Survival will be held at Camp Michaels. The scouts will learn how to survive in the wilderness with only the things around them. They will build there own shelter and sleep in that shelter one night.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(WS24)">Click here to see photos</a>
         </div>
         <a href="https://danbeard.org/campmichaels/">
           <div class="eventImg">
