--- a/photos.html
+++ b/photos.html
@@ -79,6 +79,8 @@
         <a href="#gallery" onclick="renderPhotos(PS24)">Paddle Sports</a>
         <a href="#gallery" onclick="renderPhotos(JCH24)">July Court of Honor</a>
         <a href="#gallery" onclick="renderPhotos(MC24)">Marengo Caves</a>
+        <a href="#gallery" onclick="renderPhotos(Mum24)">Mum Festival</a>
+        <a href="#gallery" onclick="renderPhotos(WS24)">Wilderness Survival</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
