added photos for turkey bowl and fixed position assignments

--- a/events.html
+++ b/events.html
@@ -267,7 +267,7 @@
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
           <p>Turkey Bowl will be held at the Redmen Picnic Grounds in Troy, OH. For this event the scouts spend the day cooking a Thanksgiving meal that they will share with their families that evening.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(TB24)">Click here to see photos</a>
         </div>
         <a href="https://m.facebook.com/profile.php?id=559276214114138">
           <div class="eventImg">
