--- a/photos.html
+++ b/photos.html
@@ -81,6 +81,7 @@
         <a href="#gallery" onclick="renderPhotos(MC24)">Marengo Caves</a>
         <a href="#gallery" onclick="renderPhotos(Mum24)">Mum Festival</a>
         <a href="#gallery" onclick="renderPhotos(WS24)">Wilderness Survival</a>
+        <a href="#gallery" onclick="renderPhotos(TB24)">Turkey Bowl</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
