--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -143,6 +143,7 @@
       <div>
         <h3>2018</h3>
         <p>Thomas Burkett</p>
+        <p>Connor Post</p>
       </div>
       <div>
         <h3>2019</h3>
@@ -168,6 +169,11 @@
       <div>
         <h3>2023</h3>
         <p>Christian Hartman</p>
+      </div>
+      <div>
+        <h3>2024</h3>
+        <p>Joseph Estep</p>
+        <p>William Kaufman</p>
       </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
