added annual planning photos and updated troop positions

--- a/events.html
+++ b/events.html
@@ -280,7 +280,7 @@
           <h3>December</h3>
           <h4>Yearly Planning/Miami County YMCA - Robinson Branch</h4>
           <p>The Yearly Planning event will be held at Cricket Holler Scout Camp in Dayton, OH. At this event the scouts plan all the next years events.</p>
-          <a href="#gallery1" onclick="renderEventPhotos1()">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos1(AP24)">Click here to see photos</a>
         </div>
         <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
           <div class="eventImg">
