--- a/photos.html
+++ b/photos.html
@@ -82,6 +82,7 @@
         <a href="#gallery" onclick="renderPhotos(Mum24)">Mum Festival</a>
         <a href="#gallery" onclick="renderPhotos(WS24)">Wilderness Survival</a>
         <a href="#gallery" onclick="renderPhotos(TB24)">Turkey Bowl</a>
+        <a href="#gallery" onclick="renderPhotos(AP24)">Annual Planning</a>
       </div>
     <section class="year">
       <h2>Year 2023</h2>
